--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="addjourney_to_label">To</string>
     <string name="addjourney_duration_label">Duration</string>
     <string name="addjourney_start_time_label">Start Time</string>
+    <string name="addjourney_next_btn_txt">Submit</string>
 </resources>
