Renamed text field variables in layouts and tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">JourneyStore</string>
-    <string name="journeylist_addjourney_btntext">Add Journey</string>
-    <string name="addjourney_from_label">From</string>
-    <string name="addjourney_addr_hints">Type for suggestions</string>
-    <string name="addjourney_to_label">To</string>
-    <string name="addjourney_duration_label">Duration</string>
-    <string name="addjourney_start_time_label">Start Time</string>
-    <string name="addjourney_next_btn_txt">Submit</string>
+    <string name="add_journey_btn_text">Add Journey</string>
+    <string name="add_journey_from_label">From</string>
+    <string name="add_journey_addr_hints">Type for suggestions</string>
+    <string name="add_journey_to_label">To</string>
+    <string name="add_journey_duration_label">Duration</string>
+    <string name="add_journey_start_time_label">Start Time</string>
+    <string name="add_journey_next_btn_txt">Submit</string>
 </resources>
