Added required field to Activity. Added code to save state on configuration change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="add_journey_btn_text">Add Journey</string>
     <string name="add_journey_from_label">From</string>
     <string name="add_journey_addr_hints">Type for suggestions</string>
+    <string name="add_journey_required_field_error">Required</string>
     <string name="add_journey_to_label">To</string>
     <string name="add_journey_duration_label">Duration</string>
     <string name="add_journey_start_time_label">Start Time</string>
